# ner-bert

./: .gitignore  pyproject.toml
src/notebook/: bert_ner.ipynb
