[tool.poetry]
name = "bert_ner"
version = "0.1.0"
description = ""
authors = ["Iana Kasimova <Iana_Kasimova@epam.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.19.2"
nltk = "^3.8"
transformers = "^4.25.1"
torch = "^1.13.1"
sklearn = "^0.0.post1"
scikit-learn = "^1.2.0"
datasets = "^2.8.0"
seqeval = "^1.2.2"
evaluate = "^0.4.0"
spacy = "^3.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
